Fixed skill spacing

--- a/css/main.css
+++ b/css/main.css
@@ -634,7 +634,7 @@ footer p {
 
   .language-wrapper {
     justify-content: space-evenly;
-    max-width: 1100px;
+    width: 1100px;
   }
 
   .tool-wrapper {
